--- a/index.html
+++ b/index.html
@@ -12,145 +12,165 @@
     />
 
     <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body class="body" style="font-family: Roboto, sans-serif">
     <!--menu-->
+
     <header class="header">
-      <nav class="header-nav">
-        <a href="./index.html" class="link-logo-header link"
-          >Web<span class="span">Studio</span></a
-        >
+      <div class="container header-container">
+        <nav class="header-nav">
+          <a href="./index.html" class="link-logo-header link"
+            >Web<span class="span">Studio</span></a
+          >
 
-        <ul class="list">
-          <li class="header-item">
-            <a class="link-header link" href="./index.html">Studio</a>
-          </li>
-          <li class="header-item">
-            <a class="link-header link" href="./portfolio.html">Portfolio</a>
-          </li>
-          <li class="header-item">
-            <a class="link-header link" href="">Contacts</a>
-          </li>
-        </ul>
-      </nav>
+          <ul class="header-list list">
+            <li class="header-item">
+              <a class="link-header link" href="./index.html">Studio</a>
+            </li>
+            <li class="header-item">
+              <a class="link-header link" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li class="header-item">
+              <a class="link-header link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
 
-      <address class="heder-address">
-        <ul class="header-list-address list">
-          <li class="header-item-address link">
-            <a class="link-address link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="header-item-address">
-            <a class="link-address link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+        <address class="heder-address">
+          <ul class="header-list-address list">
+            <li class="header-item-address link">
+              <a class="link-address link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="header-item-address">
+              <a class="link-address link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
 
     <main>
       <section class="hero">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <div class="container container-hero">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
 
-        <button type="button" class="hero-button">Order Service</button>
+          <button type="button" class="hero-button">Order Service</button>
+        </div>
       </section>
 
       <!--skills-->
 
       <section class="skills">
-        <h2>/</h2>
-        <ul class="list">
-          <li class="skills-item">
-            <h3 class="skills-title">Strategy</h3>
-            <p class="skills-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
+        <div class="container container-skills">
+          <h2></h2>
+          <ul class="list list-skills">
+            <li class="skills-item item-strategy">
+              <h3 class="skills-title">Strategy</h3>
+              <p class="skills-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
 
-          <li class="skills-item">
-            <h3 class="skills-title">Punctuality</h3>
-            <p class="skills-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
+            <li class="skills-item">
+              <h3 class="skills-title">Punctuality</h3>
+              <p class="skills-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
 
-          <li class="skills-item">
-            <h3 class="skills-title">Diligence</h3>
-            <p class="skills-text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
+            <li class="skills-item">
+              <h3 class="skills-title">Diligence</h3>
+              <p class="skills-text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
 
-          <li class="skills-item">
-            <h3 class="skills-title">Technologies</h3>
-            <p class="skills-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+            <li class="skills-item">
+              <h3 class="skills-title">Technologies</h3>
+              <p class="skills-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!--work-->
       <section class="work">
-        <h2 class="work-title">What are we doing</h2>
-        <ul class="list">
-          <li class="work-item">
-            <img src="./images/img6.jpg" alt="display" width="360" />
-          </li>
-          <li class="work-item">
-            <img src="./images/img5.jpg" alt="apps" width="360" />
-          </li>
-          <li class="work-item">
-            <img src="./images/img4.jpg" alt="modile" width="360" />
-          </li>
-        </ul>
+        <div class="container container-work">
+          <h2 class="work-title">What are we doing</h2>
+          <ul class="list work-list">
+            <li class="work-item">
+              <img src="./images/img6.jpg" alt="display" width="360" />
+            </li>
+            <li class="work-item">
+              <img src="./images/img5.jpg" alt="apps" width="360" />
+            </li>
+            <li class="work-item">
+              <img src="./images/img4.jpg" alt="modile" width="360" />
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!--team-->
       <section class="team">
-        <h2 class="team-title">Our Team</h2>
+        <div class="container container-team">
+          <h2 class="team-title">Our Team</h2>
 
-        <ul class="list">
-          <li class="team-item">
-            <img src="./images/img.jpg" alt=">Mark Guerrero" width="264" />
-            <h3 class="team-title-second">Mark Guerrero</h3>
-            <p class="team-text">Product Designer</p>
-          </li>
-          <li class="team-item">
-            <img src="./images/img1.jpg" alt="Tom Ford" width="264" />
-            <h3 class="team-title-second">Tom Ford</h3>
-            <p class="team-text">Frontend Developer</p>
-          </li>
-          <li class="team-item">
-            <img src="./images/img2.jpg" alt="Camila Garcia" width="264" />
-            <h3 class="team-title-second">Camila Garcia</h3>
-            <p class="team-text">Marketing</p>
-          </li>
-          <li class="team-item">
-            <img src="./images/img3.jpg" alt="Daniel Wilson" width="264" />
-            <h3 class="team-title-second">Daniel Wilson</h3>
-            <p class="team-text">UI Designer</p>
-          </li>
-        </ul>
+          <ul class="list team-list">
+            <li class="team-item">
+              <img src="./images/img.jpg" alt=">Mark Guerrero" width="264" />
+              <h3 class="team-title-second">Mark Guerrero</h3>
+              <p class="team-text">Product Designer</p>
+            </li>
+            <li class="team-item">
+              <img src="./images/img1.jpg" alt="Tom Ford" width="264" />
+              <h3 class="team-title-second">Tom Ford</h3>
+              <p class="team-text">Frontend Developer</p>
+            </li>
+            <li class="team-item">
+              <img src="./images/img2.jpg" alt="Camila Garcia" width="264" />
+              <h3 class="team-title-second">Camila Garcia</h3>
+              <p class="team-text">Marketing</p>
+            </li>
+            <li class="team-item">
+              <img src="./images/img3.jpg" alt="Daniel Wilson" width="264" />
+              <h3 class="team-title-second">Daniel Wilson</h3>
+              <p class="team-text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <!--info-->
     <footer class="footer">
-      <a class="link-logo-footer link" href="./index.html">
-        Web<span class="span-footer">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container container-footer">
+        <a class="link-logo-footer link" href="./index.html">
+          Web<span class="span-footer">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
