--- a/portfolio.html
+++ b/portfolio.html
@@ -11,144 +11,180 @@
       rel="stylesheet"
     />
     <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body class="body-pg2" style="font-family: Roboto, sans-serif">
     <!--menu-->
     <header class="header">
-      <nav class="header-nav">
-        <a href="./index.html" class="link-logo-header link"
-          >Web<span class="span">Studio</span></a
-        >
+      <div class="container header-container">
+        <nav class="header-nav">
+          <a href="./index.html" class="link-logo-header link"
+            >Web<span class="span">Studio</span></a
+          >
 
-        <ul class="list">
-          <li class="header-item">
-            <a class="link-header link" href="./index.html">Studio</a>
-          </li>
-          <li class="header-item">
-            <a class="link-header link" href="./portfolio.html">Portfolio</a>
-          </li>
-          <li class="header-item">
-            <a class="link-header link" href="">Contacts</a>
-          </li>
-        </ul>
-      </nav>
+          <ul class="header-list list">
+            <li class="header-item">
+              <a class="link-header link" href="./index.html">Studio</a>
+            </li>
+            <li class="header-item">
+              <a class="link-header link" href="./portfolio.html">Portfolio</a>
+            </li>
+            <li class="header-item">
+              <a class="link-header link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
 
-      <address class="heder-address">
-        <ul class="header-list-address list">
-          <li class="header-item-address link">
-            <a class="link-address link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="header-item-address">
-            <a class="link-address link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+        <address class="heder-address">
+          <ul class="header-list-address list">
+            <li class="header-item-address link">
+              <a class="link-address link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="header-item-address">
+              <a class="link-address link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
 
     <main>
       <section class="menu-button">
-        <h1>/</h1>
-        <ul class="list">
-          <li><button type="button" class="pg-button">All</button></li>
-          <li><button type="button" class="pg-button">Web Site</button></li>
-          <li><button type="button" class="pg-button">App</button></li>
-          <li><button type="button" class="pg-button">Design</button></li>
-          <li><button type="button" class="pg-button">Marketing</button></li>
-        </ul>
-
-        <ul class="list">
-          <li>
-            <a href="" class="link">
-              <img
-                src="./images/hw9.jpg"
-                alt="Banking App Interface Concept"
-                width="360"
-              />
-              <h2 class="portfolio-title-pg">Banking App Interface Concept</h2>
-              <p class="portfolio-text-pg">App</p>
-            </a>
-          </li>
-          <li>
-            <a href="" class="link">
-              <img src="./images/hw7.jpg" alt="Cashless Payment" width="360" />
-              <h2 class="portfolio-title-pg">Cashless Payment</h2>
-              <p class="portfolio-text-pg">Marketing</p></a
-            >
-          </li>
-          <li>
-            <a href="" class="link">
-              <img src="./images/hw1.jpg" alt="Meditation App" width="360" />
-              <h2 class="portfolio-title-pg">Meditation App</h2>
-              <p class="portfolio-text-pg">App</p></a
-            >
-          </li>
-          <li>
-            <a href="" class="link">
-              <img src="./images/hw2.jpg" alt="Taxi Service" width="360" />
-              <h2 class="portfolio-title-pg">Taxi Service</h2>
-              <p class="portfolio-text-pg">Marketing</p></a
-            >
-          </li>
-          <li>
-            <a href="" class="link">
-              <img
-                src="./images/hw4.jpg"
-                alt="Screen Illustrations"
-                width="360"
-              />
-              <h2 class="portfolio-title-pg">Screen Illustrations</h2>
-              <p class="portfolio-text-pg">Design</p></a
-            >
-          </li>
-          <li>
-            <a href="" class="link">
-              <img src="./images/hw3.jpg" alt="Online Courses" width="360" />
-              <h2 class="portfolio-title-pg">Online Courses</h2>
-              <p class="portfolio-text-pg">Marketing</p>
-            </a>
-          </li>
-          <li>
-            <a href="" class="link">
-              <img
-                src="./images/hw5.jpg"
-                alt="Instagram Stories Concept"
-                width="360"
-              />
-              <h2 class="portfolio-title-pg">Instagram Stories Concept</h2>
-              <p class="portfolio-text-pg">Design</p>
-            </a>
-          </li>
-          <li>
-            <a href="" class="link">
-              <img src="./images/hw8.jpg" alt="Organic Food" width="360" />
-              <h2 class="portfolio-title-pg">Organic Food</h2>
-              <p class="portfolio-text-pg">Web Site</p>
-            </a>
-          </li>
-          <li>
-            <a href="" class="link">
-              <img src="./images/hw6.jpg" alt="Fresh Coffee" width="360" />
-              <h2 class="portfolio-title-pg">Fresh Coffee</h2>
-              <p class="portfolio-text-pg">Web Site</p>
-            </a>
-          </li>
-        </ul>
+        <div class="container buton-container">
+          <h1></h1>
+          <ul class="list list-button">
+            <li><button type="button" class="pg-button">All</button></li>
+            <li>
+              <button type="button" class="pg-button button-web">
+                Web Site
+              </button>
+            </li>
+            <li><button type="button" class="pg-button">App</button></li>
+            <li><button type="button" class="pg-button">Design</button></li>
+            <li><button type="button" class="pg-button">Marketing</button></li>
+          </ul>
+        </div>
+        <div class="container container-mod">
+          <ul class="list list-mode">
+            <li class="item-mod">
+              <a href="" class="link">
+                <img
+                  src="./images/hw9.jpg"
+                  alt="Banking App Interface Concept"
+                  width="360"
+                />
+                <div class="conteiner-text">
+                <h2 class="portfolio-title-pg">
+                  Banking App Interface Concept
+                </h2>
+                <p class="portfolio-text-pg">App</p></div>
+              </a>
+            </li>
+            <li class="item-mod">
+              <a href="" class="link">
+                <img
+                  src="./images/hw7.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                />
+                <div class="conteiner-text">
+                <h2 class="portfolio-title-pg">Cashless Payment</h2>
+                <p class="portfolio-text-pg">Marketing</p></a
+              >
+              </div>
+            </li>
+            <li class="item-mod">
+              <a href="" class="link">
+                <img src="./images/hw1.jpg" alt="Meditation App" width="360" />
+                <div class="conteiner-text">
+                <h2 class="portfolio-title-pg">Meditation App</h2>
+                <p class="portfolio-text-pg">App</p></a
+              >
+              </div>
+            </li>
+            <li class="item-mod">
+              <a href="" class="link">
+                <img src="./images/hw2.jpg" alt="Taxi Service" width="360" />
+                <div class="conteiner-text">
+                <h2 class="portfolio-title-pg">Taxi Service</h2>
+                <p class="portfolio-text-pg">Marketing</p></a
+              >
+              </div>
+            </li>
+            <li class="item-mod">
+              <a href="" class="link">
+                <img
+                  src="./images/hw4.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                />
+                <div class="conteiner-text">
+                <h2 class="portfolio-title-pg">Screen Illustrations</h2>
+                <p class="portfolio-text-pg">Design</p></div>
+                </a>
+            </li>
+            <li class="item-mod">
+              <a href="" class="link">
+                <img src="./images/hw3.jpg" alt="Online Courses" width="360" />
+                <div class="conteiner-text">
+                <h2 class="portfolio-title-pg">Online Courses</h2>
+                <p class="portfolio-text-pg">Marketing</p></div>
+              </a>
+            </li>
+            <li class="item-mod">
+              <a href="" class="link">
+                <img
+                  src="./images/hw5.jpg"
+                  alt="Instagram Stories Concept"
+                  width="360"
+                />
+                <div class="conteiner-text">
+                <h2 class="portfolio-title-pg">Instagram Stories Concept</h2>
+                <p class="portfolio-text-pg">Design</p></div>
+              </a>
+            </li>
+            <li class="item-mod">
+              <a href="" class="link">
+                <img src="./images/hw8.jpg" alt="Organic Food" width="360" />
+                <div class="conteiner-text">
+                <h2 class="portfolio-title-pg">Organic Food</h2>
+                <p class="portfolio-text-pg">Web Site</p></div>
+              </a>
+            </li>
+            <li class="item-mod">
+              <a href="" class="link">
+                <img src="./images/hw6.jpg" alt="Fresh Coffee" width="360" />
+                <div class="conteiner-text">
+                <h2 class="portfolio-title-pg">Fresh Coffee</h2>
+                <p class="portfolio-text-pg">Web Site</p></div>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <footer class="footer">
-      <a href="./index.html" class="link-logo-footer link">
-        Web<span class="span-footer">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container container-footer">
+        <a class="link-logo-footer link" href="./index.html">
+          Web<span class="span-footer">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
